[tool.poetry]
name = "summarize-app"
version = "0.1.0"
description = ""
authors = ["2525 <hi5ro20mu1999@gmail.com>"]
readme = "README.md"
packages = [{include = "summarize_app"}]

[tool.poetry.dependencies]
python = "~3.10"
newspaper3k = "^0.2.8"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
slack-bolt = "^1.18.0"
pytesseract = "^0.3.10"
black = "^23.3.0"
google-cloud-vision = "^3.4.3"
google-cloud-firestore = "^2.11.1"
gunicorn = "^20.1.0"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
